# manas

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
data/: manas.docx
src/: config.py  main.py  models.py
src/ingest/: chunker.py  ingest.py  load_docx.py
src/retrieval/: rag_service.py
src/retrieval/prompts/: system_prompt.txt
src/shared/qdrant/: vector_search.py  vector_store.py
static/: index.html  script.js  style.css
