[project]
name = "manas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "docx2txt>=0.9",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.24.0",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
    "uvicorn>=0.41.0",
]
